[package]
name = "cw-scoper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tree-sitter = "0.20.9" 
syn = { version = "2.0.8", features = ["full", "extra-traits", "parsing"] }
walkdir = "2"
